[package]
name = "minigrep"
description = "A simple grep clone"
keywords = ["test", "grep", "simple_grep"]
categories = ["text-processing"]
version = "0.1.0"
authors = ["Ibrahim Mohammed"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/IbrahimAlgadi/minigrep-rust"
repository = "https://github.com/IbrahimAlgadi/minigrep-rust"
homepage = "https://github.com/IbrahimAlgadi/minigrep-rust"
readme = "README.md"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
